[package]
name = "udemy-dl-rs"
version = "0.9.3"
authors = ["Bernard Niset"]
edition = "2018"

[dependencies]
reqwest = "0.9.9"
clap = "2.32.0"
failure = "0.1.5"
regex = "1.1.0"
serde = "1.0.86"
serde_derive = "1.0.86"
serde_json = "1.0.38"
indicatif = "0.11.0"

[build-dependencies]
chrono = "0.4.0"